# RUHI

./: .gitignore  GUIDE.md  README.md  SETUP.md  config.env.example  pyproject.toml
apps/ruhi_chat/: README.md
apps/ruhi_chat/backend/: __init__.py  agent.py  main.py  pipeline.py  sarvam.py
apps/ruhi_chat/backend/tests/: import_smoke.py  live_minimal.py  smoke_test.py
apps/ruhi_chat/frontend/: .gitignore  README.md  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
apps/ruhi_chat/frontend/app/: globals.css  layout.tsx  page.tsx
apps/ruhi_chat/frontend/components/: Brand.tsx  Composer.tsx  Hero.tsx  LangSwitcher.tsx  MessageBubble.tsx  StatusDot.tsx  SuggestionChips.tsx
apps/ruhi_chat/frontend/lib/: languages.ts  useChatSocket.ts
apps/ruhi_jarvis/: README.md
apps/ruhi_jarvis/backend/: __init__.py  agent.py  main.py  monitors.py  tools.py  voice.py
apps/ruhi_jarvis/backend/tests/: import_smoke.py  live_ollama.py  smoke_test.py
docs/: SPLIT_PLAN.md
shared/: __init__.py  config.py
shared/cache/: __init__.py  sarvam.py
shared/llm/: __init__.py  factory.py
shared/memory/: __init__.py  store.py
shared/tools/: __init__.py  app_launch.py  calendar.py  errors.py  news.py  notes.py  system_control.py  system_stats.py  weather.py  web_search.py
shared/voice/: __init__.py  stt.py  tts.py
