[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ruhi"
version = "0.2.0"
description = "RUHI Chat — multilingual AI chatbot for 10 Indian languages."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

# Shared core deps. App-specific deps live in apps/ruhi_chat/.
dependencies = [
    # Config
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "python-dotenv>=1.0",
    # LLM + agents (LangChain v1.x: ConversationBufferMemory removed,
    # use langchain_core.chat_history.InMemoryChatMessageHistory)
    "langchain>=1.0",
    "langchain-core>=1.0",
    "langgraph>=0.2",
    "langchain-google-genai>=2.0",
    "langchain-openai>=0.2",
    # Memory
    "chromadb>=0.5",
    # HTTP
    "httpx>=0.27",
    "aiohttp>=3.9",
    "requests>=2.31",
    # System info / tools (ported)
    "psutil>=5.9",
    "feedparser>=6.0",
    "beautifulsoup4>=4.12",
    # Backend
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "websockets>=12.0",
]

[project.optional-dependencies]
chat = [
    # RUHI Chat-specific. Sarvam SDK if/when published; otherwise httpx direct.
    "sarvamai>=0.1.4 ; python_version >= '3.10'",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[tool.setuptools.packages.find]
include = ["shared*"]

[tool.ruff]
line-length = 100
target-version = "py310"
